<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.SignupActivity">
    <ImageView
        android:id="@+id/iv_login"
        android:layout_width="157dp"
        android:layout_height="128dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/ic_logo_th3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/tv_tittle_signup"
        android:layout_width="298dp"
        android:layout_height="28dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/tittle_signup"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_login" />

    <TextView
        android:id="@+id/tv_text_signup"
        android:layout_width="328dp"
        android:layout_height="37dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/text_signup"
        android:textColor="@color/black_text"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.554"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tittle_signup" />

    <com.capstone.temanhewan.customview.MyEditText
        android:id="@+id/et_signup_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:hint="@string/name"
        android:textSize="14sp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/tv_text_signup"
        app:layout_constraintStart_toStartOf="@+id/tv_text_signup"
        app:layout_constraintTop_toBottomOf="@+id/tv_text_signup" />

    <com.capstone.temanhewan.customview.MyEditText
        android:id="@+id/et_signup_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:textSize="14sp"
        android:hint="@string/email_sign_up"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittext_background"
        app:layout_constraintEnd_toEndOf="@+id/et_signup_name"
        app:layout_constraintStart_toStartOf="@+id/et_signup_name"
        app:layout_constraintTop_toBottomOf="@+id/et_signup_name" />

    <com.capstone.temanhewan.customview.MyEditText
        android:id="@+id/et_signup_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="18dp"
        android:textSize="14sp"
        android:inputType="textPassword"
        android:background="@drawable/edittext_background"
        app:layout_constraintEnd_toEndOf="@+id/et_signup_email"
        app:layout_constraintStart_toStartOf="@+id/et_signup_email"
        app:layout_constraintTop_toBottomOf="@+id/et_signup_email" />

    <Button
        android:id="@+id/btn_signup"
        style="@style/MyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:text="@string/btn_sign_up"
        app:layout_constraintEnd_toEndOf="@+id/et_signup_pass"
        app:layout_constraintStart_toStartOf="@+id/et_signup_pass"
        app:layout_constraintTop_toBottomOf="@+id/et_signup_pass" />

    <TextView
        android:id="@+id/tv_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/have_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup" />

    <TextView
        android:id="@+id/tv_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/btn_login"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/btn_login"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toEndOf="@+id/tv_have_account"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup" />

    <ImageView
        android:id="@+id/iv_logo_feet"
        android:layout_width="406dp"
        android:layout_height="119dp"
        android:background="@drawable/ic_logo_th4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/logo" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>