<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="5dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp"
    app:contentPadding="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/iv_doctor"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/ava_doctor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_name_doctor"
            android:layout_width="236dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/name_doctor"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/iv_doctor"/>

        <TextView
            android:id="@+id/tv_price_doctor"
            android:layout_width="236dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/price_doctor"
            app:layout_constraintTop_toBottomOf="@id/tv_name_doctor"
            app:layout_constraintLeft_toRightOf="@id/iv_doctor" />

        <TextView
            android:id="@+id/btn_chat_doctor"
            style="@style/btnBayar"
            android:layout_width="115dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/btn_chat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_doctor"
            app:layout_constraintTop_toBottomOf="@+id/tv_price_doctor" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>